Project

General

Profile

Actions

Bug #23388

closed

[cls] rbd.group_image_list is incorrectly flagged as R/W

Added by Jason Dillaman about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

R/W operations cannot return any data as a payload. I suspect this is the cause of the transient failures like the following:

http://qa-proxy.ceph.com/teuthology/jdillaman-2018-03-15_20:37:28-rbd-wip-jd-testing-distro-basic-smithi/2294296/teuthology.log


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #23407: luminous: [cls] rbd.group_image_list is incorrectly flagged as R/WResolvedPrashant DActions
Actions #1

Updated by Jason Dillaman about 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #23407: luminous: [cls] rbd.group_image_list is incorrectly flagged as R/W added
Actions #4

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF