cls/rbd: group_image_list incorrectly flagged as RW

Fixes: http://tracker.ceph.com/issues/23388
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 169d84c677270cbe72ff5cddef7b021332304d6f)